aggiunto collegamento telecamera

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
    <video id="video" autoplay muted>
 
    </video>
-    <script defer src="index.js"></script>
-</body>
+   <script  src="index.js"></script>
+   </body>
 </html>
