aggiunto variabile a modello importato

--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
         <p><b>Click on an image below</b> to see the key landmarks of the hands.</p>  
         <div class="container_div">
           <img class="detectOnClick" src="https://assets.codepen.io/9177687/hand-ge4ca13f5d_1920.jpg"  crossorigin="anonymous" title="Click to get detection!" />
-          
+          <img class="detectOnClick" src="https://th.bing.com/th/id/OIP.YA90FOFDPoID8tcbFUU2VAHaHC?rs=1&pid=ImgDetMain" crossorigin="anonymous" title="Click to get detection!" />
           </div>
         <h1> Score modello</h1>
         <div id="score"></div>
