--- a/rilevamento_oggetti/index3.html
+++ b/rilevamento_oggetti/index3.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <!-- metodo hands -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4.1675469240/hands.min.js"></script> -->
+    <!-- permette di disegnare linee e nodi sulle mani -->
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils@0.3.1675466124/drawing_utils.min.js"></script> 
     <!-- importo mediapipe -->
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    
-    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils@0.3.1675466124/drawing_utils.min.js"></script> 
+    <title>Document</title> 
 </head>
 <body>
 
-
+   <section id="sec_img">
+    <img class='imgObject' src="https://assets.codepen.io/9177687/coupledog.jpeg" width="100%" crossorigin="anonymous" title="Click to get classification!" />
+    <canvas></canvas>
+   </section>
     <script src="index3.js"></script>
 </body>
 </html>
