start cordinate in html

--- a/rilevamento_oggetti/index3.html
+++ b/rilevamento_oggetti/index3.html
@@ -20,7 +20,7 @@
     <div id='imgObject'>
         <img src="https://assets.codepen.io/9177687/coupledog.jpeg" width="100%" crossorigin="anonymous" title="Click to get classification!" />
     </div>
-    <canvas></canvas>
+    <canvas id="canva"></canvas>
    </section>
     <script src="index3.js"></script>
 </body>
