--- a/rilevamento_oggetti/index3.html
+++ b/rilevamento_oggetti/index3.html
@@ -8,11 +8,7 @@
 
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils@0.3.1675466124/drawing_utils.min.js"></script>  -->
-    <!-- importo mediapipe -->
-    <!-- <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils@0.3.1675466124/drawing_utils.min.js"></script>  -->
-    <title>Document</title> 
+    <title>rilaevamento img</title> 
 </head>
 <body>
 
