start cordinate in html

--- a/rilevamento_oggetti/index3.html
+++ b/rilevamento_oggetti/index3.html
@@ -14,7 +14,7 @@
 
    <section id="sec_img">
     <div id='imgObject'>
-        <img src="https://assets.codepen.io/9177687/coupledog.jpeg" width="100%" crossorigin="anonymous" title="Click to get classification!" />
+        <img src="https://assets.codepen.io/9177687/doggo.jpeg" crossorigin="anonymous" title="Click to get classification!" />
         <canvas id="canva" width="500" height="400"></canvas>
     </div>
    </section>
