aggiuto spiegazione come usare

--- a/rilevamento_oggetti/index3.html
+++ b/rilevamento_oggetti/index3.html
@@ -13,8 +13,8 @@
 <body>
 
    <section id="sec_img">
-    <div id='imgObject'>
-        <img src="https://assets.codepen.io/9177687/doggo.jpeg" crossorigin="anonymous" title="Click to get classification!" />
+    <div>
+        <img id="imgObject" src="https://assets.codepen.io/9177687/doggo.jpeg" crossorigin="anonymous" title="Click to get classification!" />
         <canvas id="canva" width="600" height="400"></canvas>
     </div>
    </section>
