--- a/rilevamento_mani/index2.html
+++ b/rilevamento_mani/index2.html
@@ -6,7 +6,7 @@
     <title>Hand Detection</title>
     <head>
         <!-- css -->
-         <link rel="stylesheet" href="index.css">
+         <link rel="stylesheet" href="index2.css">
         <!-- metodo hands -->
         <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4.1675469240/hands.min.js"></script>
         <!-- permette di disegnare linee e nodi sulle mani -->
